--- a/style.scss
+++ b/style.scss
@@ -7,7 +7,7 @@
     --font-size-0: max(19px, 1.5vw);
     --font-size-1: 1.083rem;
     --font-size-2: 1.166rem;
-    --font-size-3: 1.25rem
+    --font-size-3: 1.25rem;
     --font-size-4: 1.333rem;
     --font-size-5: 1.416rem;
     --font-size-6: 1.5rem;
